# Prog2

./: .clang-format  .gitignore  CMakeLists.txt  Feedback_Lee1E.md  README.md  compile.md  main.cpp  notes.md
Blatt02/: main.cpp
blatt1/: CMakeLists.txt  aufgabe4.txt  aufgabe5.txt  aufgabe6.txt  main.cpp
blatt2/: CMakeLists.txt  euroCheck.cpp  euroCheck.h  main.cpp
blatt3/: CMakeLists.txt
blatt3/src/: CMakeLists.txt
blatt3/src/app/: CMakeLists.txt  game.cpp  init.cpp
blatt3/src/libGameObjects/: CMakeLists.txt  Constants.h  Missile.cpp  Missile.h  PlayerSea.cpp  PlayerSea.h  Ship.cpp  Ship.h
blatt3/src/libSea/: CMakeLists.txt  Coordinates.cpp  Object.cpp  Object.h
blatt4/: CMakeLists.txt
blatt4/src/app/: CMakeLists.txt  game.cpp  init.cpp
blatt4/src/libGameObjects/: Missile.cpp  PlayerSea.cpp  PlayerSea.h  Ship.cpp  Ship.h  TumblingMissile.cpp  TumblingMissile.h
blatt4/src/libSea/: Coordinates.cpp  Coordinates.h
src/: first.cpp  fourth.cpp  functions.cpp  functions.h  second.cpp  third.cpp
